5.0
 * Add AzureSnitch (CASSANDRA-18646)
 * Implementation of the Unified Compaction Strategy as described in CEP-26 (CASSANDRA-18397)
 * Upgrade commons cli to 1.5.0 (CASSANDRA-18659)
 * Disable the deprecated keyspace/table thresholds and convert them to guardrails (CASSANDRA-18617)
 * Deprecate CloudstackSnitch and remove duplicate code in snitches (CASSANDRA-18438)
 * Add support for vectors in UDFs (CASSANDRA-18613)
 * Improve vector value validation errors (CASSANDRA-18652)
 * Upgrade Guava to 32.0.1 (CASSANDRA-18645)
 * Add duration and count of partition keys to sstablemetadata (CASSANDRA-18639)
 * Remove deprecated compaction_tombstone_warning_threshold and compaction_large_partition_warning_threshold from yaml (CASSANDRA-18626)
 * Enhance nodetool compactionstats with additional metrics (CASSANDRA-18305)
 * Added support for type VECTOR<type, dimension> (CASSANDRA-18504)
 * Expose bootstrap and decommission state to nodetool info (CASSANDRA-18555)
 * Fix SSTabledump errors when dumping data from index (CASSANDRA-17698)
 * Avoid unnecessary deserialization of terminal arguments when executing CQL functions (CASSANDRA-18566)
 * Remove dependency on pytz library for setting CQLSH timezones on Python version >= 3.9 (CASSANDRA-17433)
 * Extend maximum expiration date (CASSANDRA-14227)
 * Add guardrail for partition tombstones and deprecate compaction_tombstone_warning_threshold (CASSANDRA-17194)
 * Print header and statistics for cassandra-stress output with arbitrary frequency (CASSANDRA-12972)
 * CEP-25: Trie-indexed SSTable format (CASSANDRA-18398)
 * Make cassandra-stress able to read all credentials from a file (CASSANDRA-18544)
 * Add guardrail for partition size and deprecate compaction_large_partition_warning_threshold (CASSANDRA-18500)
 * Add HISTORY command for CQLSH (CASSANDRA-15046)
 * Fix sstable formats configuration (CASSANDRA-18441)
 * Add guardrail to bound timestamps (CASSANDRA-18352)