@@ -1,4 +1,5 @@
 5.0
+ * Remove legacy 3.0/3.11 buffer pool metrics (CASSANDRA-18313)
  * Add AzureSnitch (CASSANDRA-18646)
  * Implementation of the Unified Compaction Strategy as described in CEP-26 (CASSANDRA-18397)
  * Upgrade commons cli to 1.5.0 (CASSANDRA-18659)
